maximum heap size and perm gen size for tests set